auto-test/tests/chapter_15/invalid_types/compare_pointer_to_int.c
int main(void)
{
    long *l = 0;
    
    
    return l <= 100ul;
}